fixed notes/description bug

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -44,7 +44,7 @@
                 <div class="subheader-text spacer"></div>
             </div>
             <div class="description">
-                <p><%= notes %></p>
+                <p><%= description %></p>
             </div>
             <div class="class-sections table-responsive">
                 <span class="subheader-text bold">Sections</span>
