--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -25,7 +25,7 @@
         </div>
 
 
-        <div class="modal fade upload-modal-auto" tabindex="-1" role="dialog" aria-labelledby="Upload New Transcript" aria-hidden="true">
+        <div class="modal fade upload-modal-auto" id="auto-modal" tabindex="-1" role="dialog" aria-labelledby="Upload New Transcript" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade upload-modal-manual" tabindex="-1" role="dialog" aria-labelledby="Upload New Transcript" aria-hidden="true">
+        <div class="modal fade upload-modal-manual" id="manual-modal" tabindex="-1" role="dialog" aria-labelledby="Upload New Transcript" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
