--- a/public/css/course.css
+++ b/public/css/course.css
@@ -294,12 +294,12 @@
     }
 }
 
-.section-num {
+.table-link {
     font-size: 1em;
     color: #89b0b7;
 }
 
-.section-num:hover {
+.table-link:hover {
     color: #0F436D
 }
 
