small changes + change db schema

--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <form action="account.html" method="post" enctype="multipart/form-data" id="upload-form">
-                            <textarea class="manual-add" name="new-courses" type="text" placeholder="Enter the semester names and the course numbers of the courses you took that semester." required></textarea>
+                            <textarea class="manual-add" name="new-courses" type="text" placeholder="Enter the semester names, course numbers, and course names of the courses you took that semester." required></textarea>
                         </form>
                     </div>
                     <div class="modal-footer">
