--- a/public/css/account.css
+++ b/public/css/account.css
@@ -198,6 +198,7 @@ p {
     .semester {
         text-align: center;
         width: 100%;
+        padding-bottom: 1.5em;
     }
 
     .username-header {
